...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TZr-ht-U1s">
                                <rect key="frame" x="158" y="112" width="59" height="30"/>
                                <state key="normal" title="Choice 1"/>
                                <connections>
                                    <segue destination="VaQ-wk-38j" kind="presentation" identifier="CHOICE1_SEGUE" id="VzG-Kh-Sdp"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4M6-6b-G43">
                                <rect key="frame" x="157" y="158" width="61" height="30"/>
...
                            <constraint firstItem="fnl-cz-vcc" firstAttribute="centerX" secondItem="gha-3y-88P" secondAttribute="centerX" id="Kpg-1f-CbP"/>
                            <constraint firstItem="fnl-cz-vcc" firstAttribute="top" secondItem="Ctb-cl-Zyg" secondAttribute="top" constant="138" id="opF-Cp-atm"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Ctb-cl-Zyg"/>
                    </view>
                    <navigationItem key="navigationItem" id="IHH-3B-LRO">
                        <barButtonItem key="rightBarButtonItem" title="Done" id="EJv-8Y-79b">
                            <connections>
                                <action selector="onDoneTouch:" destination="fKC-C6-bue" id="ccr-Lh-Hm8"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </viewController>
...
